# Pill_dispenser_project

./: CMakeLists.txt  README.md  dummylorawanmain.cpp  lorareceive.py  lorawan.c  lorawan.h  main.c  min_requirement.c  pill_dspnsr.drawio  pill_eeprom.c  pill_eeprom.h  ring_buffer.c  ring_buffer.h  uart.c  uart.h
